# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Wed Sep 23 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Updated JDBC driver to comply with JDBC 4.2 interface now we compile
  for Java 8. This includes:
  - adding 8 methods to MonetCallableStatement
  - adding 2 methods to MonetDatabaseMetaData
  - adding 3 methods to MonetPreparedStatement
  - adding 4 methods to MonetResultSet
  - adding 8 methods to MonetStatement
- Corrected MonetDatabaseMetaData.getTypeInfo()
  - The LITERAL_PREFIX column now includes the required casting name for
    types: clob, inet, json, url, uuid and blob.
  - The SEARCHABLE column now returns typePredBasic instead of typeSearchable
    for type: blob.
  - The AUTO_INCREMENT column now returns false for types: hugeint, decimal,
    oid and wrd.

* Thu Sep 10 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Removed support for deprecated MD5 encryption algorithm in MapiSocket.

* Wed Sep 9 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected Statement.executeBatch() method. It now implicitly clears the
  batch buffer, ready to accept new addBatch() calls without the need for
  an explicit clearBatch() call.
  See also https://www.monetdb.org/bugzilla/show_bug.cgi?id=6953

* Wed Feb 19 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected the return value of getCatalogTerm() to "cat".

* Wed Feb 12 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- As Java 7 is no longer supported we now compile for Java 8 as the
  minimum required JVM version (profile compact2).
